--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "~5.0",
         "illuminate/html": "5.*",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "jenssegers/agent": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
