--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "~5.0",
         "illuminate/html": "5.*",
         "doctrine/dbal": "^2.5",
-        "jenssegers/agent": "^2.2"
+        "jenssegers/agent": "^2.2",
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "laracasts/flash": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
