--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "tre-uniti/belle-idee",
+    "description": "Belief-Based inspiration sharing",
     "license": "MIT",
     "type": "project",
+
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "~5.0",
