--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "doctrine/dbal": "^2.5",
         "jenssegers/agent": "^2.2",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "laracasts/flash": "~1.3"
+        "laracasts/flash": "~1.3",
+        "fideloper/proxy": "~3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
