--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "jenssegers/agent": "^2.2",
         "league/flysystem-aws-s3-v3": "~1.0",
         "laracasts/flash": "~1.3",
-        "fideloper/proxy": "~3.0"
+        "fideloper/proxy": "~3.0",
+        "predis/predis": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
