--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "~5.0",
+        "laravel/framework": "5.1.*",
         "illuminate/html": "5.*",
         "doctrine/dbal": "^2.5",
         "jenssegers/agent": "^2.2",
