--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "league/flysystem-aws-s3-v3": "~1.0",
         "laracasts/flash": "~1.3",
         "fideloper/proxy": "~3.0",
-        "predis/predis": "^1.0",
-        "intervention/image": "^2.3"
+        "predis/predis": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
