--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "App/Mailers"
         ],
         "psr-4": {
             "App\\": "app/"
