--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "league/flysystem-aws-s3-v3": "~1.0",
         "laracasts/flash": "~1.3",
         "fideloper/proxy": "~3.0",
-        "predis/predis": "^1.0"
+        "predis/predis": "^1.0",
+        "spatie/searchindex": "^3.2",
+        "elasticsearch/elasticsearch": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
