--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laracasts/flash": "~1.3",
         "fideloper/proxy": "~3.0",
         "predis/predis": "^1.0",
-        "spatie/searchindex": "^3.2",
+        "mmanos/laravel-search": "dev-master",
         "elasticsearch/elasticsearch": "^1.3"
     },
     "require-dev": {
