--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "fideloper/proxy": "~3.0",
         "predis/predis": "^1.0",
         "mmanos/laravel-search": "dev-master",
-        "elasticsearch/elasticsearch": "^1.3"
+        "laravel/cashier": "~5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
