--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "fideloper/proxy": "~3.0",
         "predis/predis": "^1.0",
         "mmanos/laravel-search": "dev-master",
-        "laravel/cashier": "~5.0"
+        "laravel/cashier": "~5.0",
+        "genealabs/laravel-caffeine": "~0.2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
