--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "classmap": [
             "database"
         ],
+        "files": ["app/Http/helpers.php"],
+
         "psr-4": {
             "App\\": "app/"
         }
