--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "predis/predis": "^1.0",
         "mmanos/laravel-search": "dev-master",
         "laravel/cashier": "~5.0",
-        "genealabs/laravel-caffeine": "~0.2.0"
+        "genealabs/laravel-caffeine": "~0.2.0",
+        "spatie/laravel-backup": "^3.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
