--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/cashier": "~5.0",
         "genealabs/laravel-caffeine": "~0.2.0",
         "spatie/laravel-backup": "^3.2",
-        "league/flysystem-ziparchive": "^1.0"
+        "league/flysystem-ziparchive": "^1.0",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
