--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "genealabs/laravel-caffeine": "~0.2.0",
         "spatie/laravel-backup": "^3.2",
         "league/flysystem-ziparchive": "^1.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "huddledigital/zendesk-laravel": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
