--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "spatie/laravel-backup": "^3.2",
         "league/flysystem-ziparchive": "^1.0",
         "intervention/image": "^2.3",
-        "huddledigital/zendesk-laravel": "~2.0"
+        "huddledigital/zendesk-laravel": "~2.0",
+        "taxjar/taxjar-php": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
