--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "league/flysystem-ziparchive": "^1.0",
         "intervention/image": "^2.3",
         "huddledigital/zendesk-laravel": "~2.0",
-        "taxjar/taxjar-php": "^1.3"
+        "taxjar/taxjar-php": "^1.3",
+        "laracasts/utilities": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
