--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
 
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-        "illuminate/html": "5.*",
+        "laravel/framework": "5.2.*",
         "doctrine/dbal": "^2.5",
         "jenssegers/agent": "^2.2",
         "league/flysystem-aws-s3-v3": "~1.0",
@@ -16,19 +15,22 @@
         "predis/predis": "^1.0",
         "mmanos/laravel-search": "dev-master",
         "laravel/cashier": "~5.0",
-        "genealabs/laravel-caffeine": "~0.2.0",
+        "genealabs/laravel-caffeine": "~0.3.0",
         "spatie/laravel-backup": "^3.2",
         "league/flysystem-ziparchive": "^1.0",
         "intervention/image": "^2.3",
         "huddledigital/zendesk-laravel": "~2.0",
         "taxjar/taxjar-php": "^1.3",
-        "laracasts/utilities": "~2.0"
+        "laracasts/utilities": "~2.0",
+        "laravelcollective/html": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "symfony/dom-crawler": "~3.0",
+        "symfony/css-selector": "~3.0"
     },
     "autoload": {
         "classmap": [
