--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "huddledigital/zendesk-laravel": "~2.0",
         "taxjar/taxjar-php": "^1.3",
         "laracasts/utilities": "~2.0",
-        "laravelcollective/html": "^5.2"
+        "laravelcollective/html": "^5.2",
+        "mews/purifier": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
