--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "laracasts/utilities": "~2.0",
         "laravelcollective/html": "^5.2",
         "mews/purifier": "~2.0",
-        "phpdocumentor/reflection-docblock": "2.0.*",
-        "dingo/api": "1.0.x@dev"
+        "phpdocumentor/reflection-docblock": "2.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
