--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "laravel-elixir-coffeescript": "^1.0.2"
   },
   "dependencies": {
     "bootstrap-sass": "^3.0.0",
     "coffee-script": "^1.10.0",
-    "laravel-elixir": "^3.0.0",
-    "lodash": "^3.10.1"
+    "laravel-elixir": "^6.0.0-9",
+    "lodash": "^4.14.2",
+    "sprity": "^1.0.8"
   }
 }
