--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,24 @@
 {
     "name": "tre-uniti/belle-idee",
-    "description": "A community sharing ideas and inspirations",
+    "description": "A community sharing spiritual ideas, values, and experiences",
     "license": "MIT",
     "type": "project",
 
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "laravel/framework": "5.3.*",
         "doctrine/dbal": "^2.5",
         "jenssegers/agent": "^2.2",
         "league/flysystem-aws-s3-v3": "~1.0",
         "laracasts/flash": "~1.3",
         "fideloper/proxy": "~3.0",
         "predis/predis": "^1.0",
-        "mmanos/laravel-search": "dev-master",
-        "laravel/cashier": "~5.0",
+        "laravel/cashier": "~7.0",
         "genealabs/laravel-caffeine": "~0.3.0",
         "spatie/laravel-backup": "^3.2",
         "league/flysystem-ziparchive": "^1.0",
         "intervention/image": "^2.3",
         "huddledigital/zendesk-laravel": "~2.0",
-        "taxjar/taxjar-php": "^1.3",
         "laracasts/utilities": "~2.0",
         "laravelcollective/html": "^5.2",
         "mews/purifier": "~2.0",
@@ -31,8 +29,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "symfony/dom-crawler": "~3.0",
-        "symfony/css-selector": "~3.0"
+        "symfony/dom-crawler": "3.1.*",
+        "symfony/css-selector": "3.1.*"
     },
     "autoload": {
         "classmap": [
