--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "laracasts/utilities": "~2.0",
         "laravelcollective/html": "^5.2",
         "mews/purifier": "~2.0",
-        "phpdocumentor/reflection-docblock": "2.0.*"
+        "phpdocumentor/reflection-docblock": "2.0.*",
+        "laravel/passport": "^1.0",
+        "laravel/socialite": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
